--- a/Tasks/mentoring/vanilla log form/log form.css
+++ b/Tasks/mentoring/vanilla log form/log form.css
@@ -13,12 +13,17 @@
 body {
     background-color: var(--light-grey);
     text-align: center;
-    padding: 20px 0;
     font-family: 'Noto Sans', sans-serif;
 }
+
 .form-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); 
+    -webkit-transform: translate(-50%, -50%); 
     width: 350px;
-    height: 500px;
     border: 1px solid var(--border);
     border-radius: 7px;
     box-shadow: 0px 0px 5px 0.01px rgb(207, 205, 205);
